--- a/Code/TsBeautify.ConsoleApp/TsBeautify.ConsoleApp.csproj
+++ b/Code/TsBeautify.ConsoleApp/TsBeautify.ConsoleApp.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ShellProgressBar" Version="4.2.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\TsBeautify.Tests\TsBeautify.Tests.csproj" />
   </ItemGroup>
 </Project>
