--- a/Code/TsBeautify/TsBeautify.csproj
+++ b/Code/TsBeautify/TsBeautify.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net46;netcoreapp3.1;net5.0;net6.0;</TargetFrameworks>
     <AssemblyName>TsBeautify</AssemblyName>
     <RootNamespace>TsBeautify</RootNamespace>
   </PropertyGroup>
